# splice-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: schema.md
examples/: README.md  gns430_nav.py  labels_example.py  multi_cable.py  power_distribution.py  power_in.py
schemas/: GNS430 NAV_schema.json  Power Distribution_schema.json  Power In_schema.json  README.md
splice/: __init__.py  components.py  connections.py  enums.py  export.py  harness.py  labels.py  parts.py  types.py  utils.py  validation.py
tests/: __init__.py  conftest.py  test_components.py  test_connections.py  test_export 2.py  test_export.py  test_harness.py  test_labels.py  test_validation.py
