[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splice-py"
dynamic = ["version"]
description = "Python library for programmatic Splice harness generation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Splice CAD", email = "info@splice-cad.com"}
]
maintainers = [
    {name = "Splice CAD", email = "info@splice-cad.com"}
]
keywords = ["cable", "harness", "wiring", "manufacturing", "splice"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering"
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "black>=23.0",
    "flake8>=6.0",
    "isort>=5.0"
]
upload = [
    "requests>=2.25.0"
]

[project.urls]
Homepage = "https://github.com/splice-cad/splice-py"
Documentation = "https://github.com/splice-cad/splice-py#readme"
Repository = "https://github.com/splice-cad/splice-py.git"
Issues = "https://github.com/splice-cad/splice-py/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["splice*"]

[tool.setuptools.dynamic]
version = {attr = "splice.__version__"}

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=splicepy --cov-report=html --cov-report=term-missing"
